# ros2_grpc_server

./: .gitignore  CMakeLists.txt  README.md  Specification.md  package.xml
include/: nav_msgs.grpc.pb.cc  nav_msgs.grpc.pb.h  nav_msgs.pb.cc  nav_msgs.pb.h  pose_messages.grpc.pb.cc  pose_messages.grpc.pb.h  pose_messages.pb.cc  pose_messages.pb.h  robot_service.grpc.pb.cc  robot_service.grpc.pb.h  robot_service.pb.cc  robot_service.pb.h  std_msgs.grpc.pb.cc  std_msgs.grpc.pb.h  std_msgs.pb.cc  std_msgs.pb.h
proto/: nav_msgs.proto  pose_messages.proto  robot_service.proto  std_msgs.proto
script/: generate_grpc_py.sh  grpc_client.py  nav_msgs_pb2.py  nav_msgs_pb2_grpc.py  pose_messages_pb2.py  pose_messages_pb2_grpc.py  robot_service_pb2.py  robot_service_pb2_grpc.py  std_msgs_pb2.py  std_msgs_pb2_grpc.py
script/templates/: index.html
src/: float32_server.cpp  pose_client.cpp  pose_server.cpp
